Added Cypress and Preview2 runs

--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0.5; url = '/categories/obsidian.html'" />
+    <meta http-equiv="refresh" content="0.5; url = '/categories/cypress.html'" />
+    <link rel="stylesheet" href="style.css">
     <title>Loading</title>
 </head>
 <body>
-    <p>there is nothing here yet lol</p>
+    <header class="navBar">
+        <div class="navContainer">
+            <div class="contRight">
+                <img src="/images/logo.png" alt="logo" class="logo">
+                <p class="websiteName">AlphaVer Speedrun Board</p>
+            </div>
+            <div class="contLeft">
+                <a href="/categories/preview2.html">Preview2</a>
+                <a href="/categories/lilypad.html">Lilypad QA</a>
+                <a href="/categories/cypress.html" style="color: #57f0c3">Cypress</a>
+            </div>
+        </div>
+    </header>
+    <div class="leaderBoard">
+        <p>there is nothing here yet lol</p>
+        <!-- <table class="table">
+            <thead class="tableHeader">
+                <th>Position</th>
+                <th>Player</th>
+                <th>Time</th>
+                <th>Video</th>
+            </thead>
+            <tbody class="tablePlayers">
+                <td>1</td>
+                <td>username</td>
+                <td>mm:ss:nnn</td>
+                <td class="link">
+                    <a class="link" href="youtube or demo link">Link</a>
+                </td>
+            </tbody>
+        </table> -->
+    </div>
 </body>
 </html>
